      (Fixes LP: #108147)
  * DistUpgrade/DistUpgradeControler.py:
    - show total needed space in not-enough-free-space message
      (Fixes LP: #46775)
    - fix in snapshot feature (Fixes LP: #108413)
    - deal better with very slow downloads (disable cache cleanup)
    - improve free space calculation in /boot (Fixes LP: #116163, #104337)
    - implement SystemCleanup spec kernel removal
  * Separate downloading and upgrading (Fixes LP: #91978)
  * Show demotions before runing the upgrade (Fixes LP: #91998)
  * UpdateManager/UpdateManager.py:
    - re-check for new releases too when the user clicks on 
      "Check" (Fixes LP: #107452)

 --

update-manager (1:0.62) gutsy; urgency=low

  * revert locking fix, it broke release upgrades
  * fix upgrade string

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 25 May 2007 22:14:24 +0200

update-manager (1:0.61) gutsy; urgency=low

  * add missing dh_gconf (LP#114569)
  * fix mispelled entry in removal_blacklist (LP#107558)
  * fix locking problem (LP#108446)
  * make the wording of the free space message more clear

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 14 May 2007 10:09:54 +0200

update-manager (1:0.60) gutsy; urgency=low

  * DistUpgrade/DistUpgradeControler.py:
    - fix free space check when the dir checked is a symlink
      (LP#106804)
    - increase minAge for the apt cleanup cron job during the upgrade
      to fix race for people with very slow network (LP#109548)
    - deal with invalid lines in /proc/mounts when calculating 
      the free space (LP#108284)
  * cdromupgrade:
    - do not call any authentication mechanism, that is the
      responsibility of the user (LP#107431)
  * DistUpgrade/DistUpgradeViewKDE.py:
    - fix a bug in the cdrom progress (LP#107451)
  * DistUpgrade/DistUpgradeViewText.py:
    - send correct package failure information to log (LP#109209)
  * DistUpgrade/crashdialog.ui
    - Fix bug report URL in crash dialogue (LP#108969)
  * UpdateManager/Core/MetaRelease.py: