@@ -14,6 +14,7 @@ update-manager (1:0.63) gutsy; urgency=low
     - deal better with very slow downloads (disable cache cleanup)
     - improve free space calculation in /boot (Fixes LP: #116163, #104337)
     - implement SystemCleanup spec kernel removal
+    - implement SystemCleanup spec unused dependencies removal
   * Separate downloading and upgrading (Fixes LP: #91978)
   * Show demotions before runing the upgrade (Fixes LP: #91998)
   * UpdateManager/UpdateManager.py:
